# flacon

./: .clang-format  .gitignore  .pvsconfig  .travis.yml  CMakeLists.txt  LICENSE  README.md  _config.yml  appconfig.h.in  application.cpp  application.h  application_mac.mm  audiofilematcher.cpp  audiofilematcher.h  commandlineparser.cpp  commandlineparser.h  consoleout.cpp  consoleout.h  cue.cpp  cue.h  cuedata.cpp  cuedata.h  cuesheet_syntax.md  debug.cpp  debug.h  disc.cpp  disc.h  disk.cpp  disk.h  extprogram.cpp  extprogram.h  index.html  inputaudiofile.cpp  inputaudiofile.h  main.cpp  params.json  patternexpander.cpp  patternexpander.h  profiles.cpp  profiles.h  (+28 more)
converter/: CMakeLists.txt  converter.cpp  converter.h  converterenv.h  converterthread.cpp  converterthread.h  convertertypes.cpp  convertertypes.h  copycover.cpp  copycover.h  coverimage.cpp  coverimage.h  cuecreator.cpp  cuecreator.h  decoder.cpp  decoder.h  discpipline.cpp  discpipline.h  diskpipline.cpp  diskpipline.h  encoder.cpp  encoder.h  extprocess.cpp  extprocess.h  extprogram.cpp  extprogram.h  gain.cpp  gain.h  replaygain.cpp  replaygain.h  resampler.cpp  resampler.h  sox.cpp  splitter.cpp  splitter.h  totalprogresscounter.cpp  totalprogresscounter.h  wav.cpp  wav.h  wavheader.cpp  (+3 more)
tests/: CMakeLists.txt  convertertest.cpp  convertertest.h  discspec.cpp  discspec.h  flacontest.cpp  flacontest.h  inittestcase.cpp  json_struct.h  test_audiofilematcher.cpp  test_convert.cpp  test_convertbroken.cpp  test_cue.cpp  test_cuedata.cpp  test_cuereader.cpp  test_decoder.cpp  test_findaudiofile.cpp  test_findcuefile.cpp  test_format.cpp  test_inputaudiofile.cpp  test_loaddiscfromaudio.cpp  test_metadatawriter.cpp  test_outformat.cpp  test_outformatencoderargs.cpp  test_patternexpander.cpp  test_profiles.cpp  test_replaygain.cpp  test_searchcoverimage.cpp  test_textcodecs.cpp  test_trackresultfilename.cpp  test_types.cpp  test_validator.cpp  test_wav.cpp  test_wavheader.cpp  testflacon.cpp  testflacon.h  testspec.cpp  testspec.h  tools.cpp  tools.h
tests/data/: 24x96.wav.hdr  CD.wav.hdr  prepare_trackset.sh  ru.result  ru_cp1251.cue  ru_utf8.cue  ru_utf8_BOM.cue  simple.cue
tests/data/testAudioFileMatcher/01/: Album.cue  Album.expected
tests/data/testAudioFileMatcher/02/: Album.expected  spec.yaml
tests/data/testAudioFileMatcher/03/: Album.cue
tests/data/testAudioFileMatcher/04_Multi_disc_=>_CueFile_1.ape/: CueFile.cue  expected.expected  spec.yaml
tests/data/testAudioFileMatcher/05 AlbumSide/: expected.expected  spec.yaml
tests/data/testAudioFileMatcher/06 Album Side/: Album.cue  expected.expected  spec.yaml
tests/data/testAudioFileMatcher/07 AlbumDisk/: expected.expected  spec.yaml
tests/data/testAudioFileMatcher/09_Multi_disk_=>_CUE+[Disk_1]/: expected.expected  spec.yaml
tests/data/testAudioFileMatcher/10_Multi_disk_=>_CUE+[Disk_#1]/: expected.expected  spec.yaml
tests/data/testAudioFileMatcher/11_Multi_disk_=>_CUE+[Disk_№1]/: expected.expected  spec.yaml
tests/data/testAudioFileMatcher/12_Multi_disk_=>_CUE+Disk_001/: expected.expected  spec.yaml
tests/data/testAudioFileMatcher/13/: expected.expected  spec.yaml
tests/data/testAudioFileMatcher/14_Not_confuse_1_and_11/: CueFile.cue  expected.expected  spec.yaml
tests/data/testConvert/: 02.cuecreator.cue  02.expected.cue  03.expected.cue  04.cuecreator.cue  04.expected.cue  05.cuecreator.cue  05.expected.cue  06.garbageInTags.cue
tests/data/testCue/: 00_short.cue  00_short.cue.expected  01_Meat Loaf - Bat Out Of Hell.cue.expected  02_dragonattack.cue.expected  03_stonecold.cue  03_stonecold.cue.expected  04_issue_75.cue  04_issue_75.cue.expected  05_issue_77.cue.expected  06_issue86.cue  06_issue86.cue.expected  07_issue_119 TOTALDISCS and DISCNUMBER tags.cue  07_issue_119 TOTALDISCS and DISCNUMBER tags.cue.expected  08_Aria.cue  08_Aria.cue.expected  09_multiple_date.cue  09_multiple_date.cue.expected  10_First_index00.cue  10_First_index00.cue.expected
tests/data/testCueData/: ._00_short.cue  ._00_short.cue.expected  ._01_lower_case.cue  ._02_multi_file.cue  ._02_multi_file.cue.expected  00_short.cue.expected  01_lower_case.cue  01_lower_case.cue.expected  02_multi_file.cue  02_multi_file.cue.expected  09_multiple_date.cue.expected
tests/data/testCueReader/: 00_short.cue.expected  01_Meat Loaf - Bat Out Of Hell.cue  01_Meat Loaf - Bat Out Of Hell.cue.expected  02_dragonattack.cue  02_dragonattack.cue.expected  03_stonecold.cue.expected  04_issue_75.cue.expected  05_issue_77.cue  05_issue_77.cue.expected  06_issue86.cue  06_issue86.cue.expected  07_issue_119 TOTALDISCS and DISCNUMBER tags.cue.expected  08_Aria.cue.expected
tests/data/testLoadProfiles/: 01-no_input_file.expected  01.expected  02-empty_input_file.expected  02.expected  02.in  03-empty_groups.expected  03-empty_groups.in  04-load.expected  04-load.in  05-no_input_file.expected  06-migrate.expected  06-migrate.in  07-migrate_invalid.expected  07-migrate_invalid.in  08-migrateMp3VbrStandardFast.expected  08-migrateMp3VbrStandardFast.in  09-migrateMp3VbrExtremeFast.expected  09-migrateMp3VbrExtremeFast.in
tests/data/testTextCodecs/: 01 - windows-1251.src  01 - windows-1251.src.hex  01 - windows-1251.txt  02 - IBM866.src  02 - IBM866.txt  03 - ISO-8859-1.txt  03 - ISO-8859-5.src  04 - ISO-8859-2.txt  04 - UTF-16BE.expected  04 - UTF-16BE.src  05 - ISO-8859-3.txt  05 - UTF-16LE.src  06 - ISO-8859-4.txt  07 - ISO-8859-5.txt  08 - ISO-8859-6.txt  09 - ISO-8859-7.txt  10 - ISO-8859-8.txt  11 - ISO-8859-9.txt  12 - ISO-8859-10.txt  13 - ISO-8859-13.txt  14 - ISO-8859-14.txt  15 - ISO-8859-15.txt  16 - ISO-8859-16.txt  17 - windows-1250.txt  18 - windows-1252.txt  19 - windows-1253.txt  20 - windows-1254.src.hex  20 - windows-1254.txt  21 - windows-1255.txt  22 - windows-1256.txt  23 - windows-1257.txt  24 - windows-1258.txt  25 - GB18030.txt  26 - Big5.txt  27 - Shift-JIS.txt
tests/mediainfo_bin/: CMakeLists.txt
tests/tmp2/: test_audiofilematcher.cpp  test_convert.cpp  test_cuedata.cpp  test_inputaudiofile.cpp  test_profiles.cpp  test_textcodecs.cpp
(+734 files in other folders)
